# url-fetcher

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/url_fetcher/: __main__.py  cli.py  fetcher.py  input_loader.py  models.py  output_writer.py  parser.py  robots.py  summary.py  url_cleaner.py
